--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Snorql: A SPARQL Explorer - Extended Edition">
     <meta name="author" content="Ammar Ammar (https://github.com/ammar257ammar)">
-	<link rel="icon" href="assets/images/favicon.ico">
+	<link rel="icon" href="assets/images/Minilogo.svg">
 
-    <title>Snorql: A SPARQL Explorer - Extended Edition</title>
+    <title>AOP-Wiki SNORQL UI</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="assets/codemirror/lib/codemirror.css" />
 	<link rel="stylesheet" type="text/css" href="assets/codemirror/addon/display/fullscreen.css" />
@@ -37,7 +37,7 @@
       <!-- <div class="container-fluid"> -->
       <div class="container">
         <div class="navbar-header">
-		  <a class="navbar-brand" id="index-page" href="">Snorql: A SPARQL Explorer - Extended Edition</a>
+		  <a class="navbar-brand" id="index-page" href=""><img src="assets/images/aopwiki-snorql-logo.png" width="300" height="65" /></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
 		  <ul class="nav navbar-nav">
@@ -74,14 +74,14 @@
 				
 				<div class="row">
 					<div class="col-md-12 buttons-holder">		
-						<input id="query-button" type="button" class="btn btn-success" value="Query" />
-						<input id="reset-button" type="button" class="btn btn-danger" value="Reset" />
-						<input id="export-csv" type="button" class="btn btn-warning" value="Export CSV" />
-						<input id="export-json" type="button" class="btn btn-primary" value="Export JSON" />
-						<input id="export-xml" type="button" class="btn btn-info" value="Export XML" />
-						<input id="generate-permalink" type="button" class="btn btn-secondary" value="Get Permalink" />
-						<input id="enter-fullscreen" type="button" class="btn btn-dark" value="Fullscreen Mode" />
-						<input id="show-prefixes" type="button" class="btn btn-light" value="Show Prefixes" />
+						<input id="query-button" type="button" class="btn btn-run" value="Query" />
+						<input id="reset-button" type="button" class="btn btn-reset" value="Reset" />
+						<input id="export-csv" type="button" class="btn btn-export" value="Export CSV" />
+						<input id="export-json" type="button" class="btn btn-export" value="Export JSON" />
+						<input id="export-xml" type="button" class="btn btn-export" value="Export XML" />
+						<input id="generate-permalink" type="button" class="btn btn-permalink" value="Get Permalink" />
+						<input id="enter-fullscreen" type="button" class="btn btn-fullscreen" value="Fullscreen Mode" />
+						<input id="show-prefixes" type="button" class="btn btn-fullscreen" value="Show Prefixes" />
 					</div>
 				</div>
 				
@@ -94,7 +94,7 @@
 						<div class="input-group">
 							<input type="text" class="form-control" id="examples-repo" name="examples-repo" placeholder="Github Repositoty URL" onchange="changeExamplesRepo();">
 							<div class="input-group-btn">
-								<button id="fetch" class="btn btn-primary"><i class="glyphicon glyphicon-refresh"></i></button>
+								<button id="fetch" class="btn btn-export"><i class="glyphicon glyphicon-refresh"></i></button>
 							</div>
 						</div>
 				  </div>
@@ -104,8 +104,8 @@
 						  <label for="input-search" class="sr-only">Search Tree:</label>
 						  <input type="input" class="form-control" id="input-search" placeholder="Type part of the query file name to search for..." value="">
 						</div>
-						<button type="button" class="btn btn-success" id="btn-search">Search</button>
-						<button type="button" class="btn btn-default" id="btn-clear-search">Clear</button>
+						<button type="button" class="btn btn-run" id="btn-search">Search</button>
+						<button type="button" class="btn btn-fullscreen" id="btn-clear-search">Clear</button>
 						<!-- </form> -->
 						<hr/>
 						<div class="list-group" id="examples"></div>
@@ -126,7 +126,7 @@
 	
 	<footer id="footer" class="footer navbar-fixed-bottom">
 	  <div class="container-fluid">
-		<p>Powered by <a id="poweredby" href="#">Snorql</a> - <a href="cookies.html">Cookie Policy</a></p>
+		<p>Powered by  <a href="https://aopwiki.org" target="_blank">AOP-Wiki</a> and <a id="poweredby" href="#" target="_blank">AOP-Wiki SNORQL</a> - <a href="cookies.html" target="_blank">Cookie Policy</a> - <a href="https://www.maastrichtuniversity.nl/research/bioinformatics" target="_blank"><img src="assets/images/Logo-bigcat.png" width="90" height="55" /></a> See also <a href="https://doi.org/10.1089/aivt.2021.0010" target="_blank">Martens et al. (2022)</a></p>
 	  </div>
 	</footer>
 
@@ -134,8 +134,8 @@
 	  <div class="container">
 		<div class="row">
 			<div class="col-md-12">		
-				<input id="exit-fullscreen" type="button" class="btn btn-danger" value="Exit Fullscreen" />
-				<input id="examples-fullscreen" type="button" class="btn btn-primary" value="Examples" />
+				<input id="exit-fullscreen" type="button" class="btn btn-reset" value="Exit Fullscreen" />
+				<input id="examples-fullscreen" type="button" class="btn btn-run" value="Examples" />
 			</div>
 		</div>
 	  </div>
@@ -153,8 +153,8 @@
 			</p>
 		  </div>
 		  <div class="modal-footer">
-			<button type="button" class="btn btn-primary">Accept</button>
-			<button type="button" class="btn btn-secondary">Reject</button>
+			<button type="button" class="btn btn-run">Accept</button>
+			<button type="button" class="btn btn-reset">Reject</button>
 		  </div>
 		</div>
 	  </div>
@@ -189,7 +189,7 @@
 			  <label for="input-search" class="sr-only">Search Tree:</label>
 			  <input type="input" class="form-control" id="input-search-fs" placeholder="Type part of the query file name to search for..." value="">
 			</div>
-			<button type="button" class="btn btn-success" id="btn-search-fs">Search</button>
+			<button type="button" class="btn btn-run" id="btn-search-fs">Search</button>
 			<button type="button" class="btn btn-default" id="btn-clear-search-fs">Clear</button>
 			<!-- </form> -->
 			<hr/>
