updated cookies webpage

--- a/cookies.html
+++ b/cookies.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Snorql: A SPARQL Explorer - Extended Edition">
     <meta name="author" content="Ammar Ammar (https://github.com/ammar257ammar)">
-	<link rel="icon" href="assets/images/favicon.ico">
+	<link rel="icon" href="assets/images/Minilogo.svg">
 
     <title>Snorql: A SPARQL Explorer - Extended Edition</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
@@ -33,7 +33,7 @@
       <!-- <div class="container-fluid"> -->
       <div class="container">
         <div class="navbar-header">
-		  <a class="navbar-brand" id="index-page" href="">Snorql: A SPARQL Explorer - Extended Edition</a>
+		  <a class="navbar-brand" id="index-page" href=""><img src="assets/images/aopwiki-snorql-logo.png" width="300" height="65" /></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
 		  <ul class="nav navbar-nav">
@@ -111,7 +111,7 @@
 	
 	<footer class="footer navbar-fixed-bottom">
 	  <div class="container">
-		<p>Powered by <a id="poweredby" href="#">Snorql</a> - <a href="cookies.html">Cookie Policy</a></p>
+		<p>Powered by  <a href="https://aopwiki.org" target="_blank">AOP-Wiki</a> and <a id="poweredby" href="#" target="_blank">AOP-Wiki SNORQL</a> - <a href="cookies.html" target="_blank">Cookie Policy</a> - <a href="https://www.maastrichtuniversity.nl/research/bioinformatics" target="_blank"><img src="assets/images/Logo-bigcat.png" width="90" height="55" /></a> See also <a href="https://doi.org/10.1089/aivt.2021.0010" target="_blank">Martens et al. (2022)</a></p>
 	  </div>
 	</footer>
 	<script type="text/javascript">
