--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 	
 	<footer id="footer" class="footer navbar-fixed-bottom">
 	  <div class="container-fluid">
-		<p>Powered by  <a href="https://aopwiki.org" target="_blank">AOP-Wiki</a> and <a id="poweredby" href="#" target="_blank">AOP-Wiki SNORQL</a> - <a href="cookies.html" target="_blank">Cookie Policy</a> - <a href="https://www.maastrichtuniversity.nl/research/bioinformatics" target="_blank"><img src="assets/images/Logo-bigcat.png" width="90" height="55" /></a> See also <a href="https://doi.org/10.1089/aivt.2021.0010" target="_blank">Martens et al. (2022)</a></p>
+		<p>Powered by  <a href="https://aopwiki.org" target="_blank">AOP-Wiki</a> and <a id="poweredby" href="#" target="_blank">AOP-Wiki SNORQL</a> - <a href="cookies.html" target="_blank">Cookie Policy</a> - <a href="https://www.maastrichtuniversity.nl/research/translational-genomics" target="_blank"><img src="assets/images/Logo-bigcat.png" style="background-color:white;" width="90" height="55" /></a> See also <a href="https://doi.org/10.1089/aivt.2021.0010" target="_blank">Martens et al. (2022)</a></p>
 	  </div>
 	</footer>
 
