--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Snorql: A SPARQL Explorer - Extended Edition">
     <meta name="author" content="Ammar Ammar (https://github.com/ammar257ammar)">
-	<link rel="icon" href="assets/images/Minilogo.svg">
+	<link rel="icon" href="assets/images/AOP-Wiki RDF logo square large.png">
 
     <title>AOP-Wiki SNORQL UI</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
@@ -36,7 +36,7 @@
       <!-- <div class="container-fluid"> -->
       <div class="container">
         <div class="navbar-header">
-		  <a class="navbar-brand" id="index-page" href=""><img src="assets/images/aopwiki-snorql-logo.png" width="300" height="65" /></a>
+		  <a class="navbar-brand" id="index-page" href=""><img src="assets/images/AOP-Wiki RDF logo square horizontal.png" width="300" height="65" /></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
 		  <ul class="nav navbar-nav">
@@ -125,7 +125,7 @@
 	
 	<footer id="footer" class="footer navbar-fixed-bottom">
 	  <div class="container-fluid">
-		<p>Powered by  <a href="https://aopwiki.org" target="_blank">AOP-Wiki</a> and <a id="poweredby" href="#" target="_blank">AOP-Wiki SNORQL</a> - <a href="cookies.html" target="_blank">Cookie Policy</a> - <a href="https://www.maastrichtuniversity.nl/research/translational-genomics" target="_blank"><img src="assets/images/Logo-bigcat.png" style="background-color:white;" width="90" height="55" /></a> See also <a href="https://doi.org/10.1089/aivt.2021.0010" target="_blank">Martens et al. (2022)</a></p>
+		<p>Powered by  <a href="https://aopwiki.org" target="_blank">AOP-Wiki</a> and <a id="poweredby" href="#" target="_blank">AOP-Wiki SNORQL</a> - <a href="cookies.html" target="_blank">Cookie Policy</a> - <a href="https://www.maastrichtuniversity.nl/research/translational-genomics" target="_blank"><img src="assets/images/Logo-TGX.png" width="90" height="55" /></a> See also <a href="https://doi.org/10.1089/aivt.2021.0010" target="_blank">Martens et al. (2022)</a></p>
 	  </div>
 	</footer>
 
